[gd_scene load_steps=3 format=3 uid="uid://jqer75wiiuoy"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_rwm0r"]
[ext_resource type="PackedScene" uid="uid://dvn5tw6bwgklm" path="res://start_menu/input_settings.tscn" id="2_2wg4p"]

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rwm0r")

[node name="menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.488
anchor_top = 0.528
anchor_right = 0.488
anchor_bottom = 0.528
offset_left = -148.52
offset_top = -188.12
offset_right = 157.48
offset_bottom = 188.88
scale = Vector2(0.997738, 1.05087)

[node name="VBoxContainer" type="VBoxContainer" parent="menu/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 61.0
grow_horizontal = 2
alignment = 1

[node name="Label" type="Label" parent="menu/Panel/VBoxContainer"]
layout_mode = 2
text = "Pauza

"
horizontal_alignment = 1

[node name="Button" type="Button" parent="menu/Panel/VBoxContainer"]
layout_mode = 2
text = "Wznów"

[node name="fullscreen_button" type="Button" parent="menu/Panel/VBoxContainer"]
layout_mode = 2
text = "Pełny ekran"

[node name="control_button" type="Button" parent="menu/Panel/VBoxContainer"]
layout_mode = 2
text = "Sterowanie"

[node name="exit_button" type="Button" parent="menu/Panel/VBoxContainer"]
layout_mode = 2
text = "Powrót do menu
"

[node name="input_settings" parent="." instance=ExtResource("2_2wg4p")]
layout_mode = 1

[connection signal="pressed" from="menu/Panel/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="menu/Panel/VBoxContainer/fullscreen_button" to="." method="_on_fullscreen_button_pressed"]
[connection signal="pressed" from="menu/Panel/VBoxContainer/control_button" to="input_settings" method="_on_control_button_pressed"]
[connection signal="button_down" from="menu/Panel/VBoxContainer/exit_button" to="." method="_on_exit_button_button_down"]
